fix center align trouble in edition page

--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,7 @@
 .que.molsimilarity label {
     display: inline-flex;
 }
+
+.que.molsimilarity #fitem_id_answersinstruct + div {
+    text-align: center;
+}
